Fix Text Alignment

--- a/src/App.css
+++ b/src/App.css
@@ -46,4 +46,5 @@ div {
   margin: 5px;
   padding: 5px;
   width: 90%;
+  text-align: left;
 }
